fix: element will no longer stretch and shows hover effect

--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -2,3 +2,7 @@
 	max-height: 282px;
 	border-radius: 10px 10px 0 0;
 }
+
+.element__image:hover {
+	cursor: pointer;
+}
