--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -7,4 +7,5 @@
 .element {
 	display: flex;
 	flex-direction: column;
+	max-width: 282px;
 }
